# pyq

./: .gitignore  BUGS.md  Cargo.toml  DESIGN.md  README.md  TASKS.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/pyq-cli/: Cargo.toml  build.rs
crates/pyq-cli/src/: cache.rs  canonical.rs  change_cov.rs  channel.rs  deadcode.rs  describe.rs  graph.rs  hierarchy.rs  main.rs  mock.rs  tests_map.rs  upgrade.rs  walk.rs
crates/pyq-cli/tests/: cache.rs  canonical.rs  change_coverage.rs  cli.rs  describe.rs  describe_shapes.rs  effect_diff.rs  effects_fusion.rs  shapes.rs
crates/pyq-cli/tests/fixtures/alias/: app.py
crates/pyq-cli/tests/fixtures/alias/pkg/: core.py
crates/pyq-cli/tests/fixtures/broken/: wip.py
crates/pyq-cli/tests/fixtures/callgraph/: chain.py
crates/pyq-cli/tests/fixtures/callgraph_import/: main.py  other.py
crates/pyq-cli/tests/fixtures/canonical/pkg/: api.py  core.py
crates/pyq-cli/tests/fixtures/canonical/tests/: test_core.py  test_models.py
crates/pyq-cli/tests/fixtures/cycle/pkg/: a.py  b.py
crates/pyq-cli/tests/fixtures/deadcode/app/: core.py  registry.py  views.py
crates/pyq-cli/tests/fixtures/deadcode/app/management/commands/: sync.py
crates/pyq-cli/tests/fixtures/deadcode/app/tests/: test_core.py
crates/pyq-cli/tests/fixtures/deadcode_override/app/: poly.py
crates/pyq-cli/tests/fixtures/effects/: boot.py  io_ops.py  pipeline.py
crates/pyq-cli/tests/fixtures/hierarchy/: animals.py
crates/pyq-cli/tests/fixtures/inputs_app/myproj/: services.py  settings.py
crates/pyq-cli/tests/fixtures/inputs_app/myproj/management/commands/: backfill.py
crates/pyq-cli/tests/fixtures/inputs_app/tests/: test_settings.py
crates/pyq-cli/tests/fixtures/mock_modattr/app/: svc.py  test_svc.py
crates/pyq-cli/tests/fixtures/mock_src_root/alice/main/: services.py
crates/pyq-cli/tests/fixtures/mock_src_root/alice/tests/: test_services.py
crates/pyq-cli/tests/fixtures/mock_targets/: tests_demo.py
crates/pyq-cli/tests/fixtures/mock_targets/myapp/: client.py
crates/pyq-cli/tests/fixtures/pythonpath_root/src/: app.py
crates/pyq-cli/tests/fixtures/pythonpath_root/src/helpers/: validators.py
crates/pyq-cli/tests/fixtures/reverse_union/: config.py  models.py  views.py
crates/pyq-cli/tests/fixtures/same_name/: m.py
crates/pyq-cli/tests/fixtures/src_root/alice/other/: views.py
crates/pyq-cli/tests/fixtures/tests_map/: test_calc.py  uses_calc.py
crates/pyq-cli/tests/fixtures/tests_map/pkg/: calc.py
crates/pyq-cli/tests/fixtures/tests_map/tests/: test_case_subclass.py  test_more.py
crates/pyq-cli/tests/fixtures/typed_cycle/pkg/: a.py  b.py
crates/pyq-dynamic/: Cargo.toml
crates/pyq-dynamic/sidecar/: README.md
crates/pyq-dynamic/sidecar/pyq_trace/: __init__.py  __main__.py  coverage.py  effects.py  fqn.py  ledger.py  pytest_plugin.py  shapes.py
crates/pyq-dynamic/sidecar/tests/: test_coverage.py  test_effects.py  test_end_to_end.py  test_fqn.py  test_shapes.py
crates/pyq-dynamic/src/: lib.rs
crates/pyq-dynamic/tests/: pytest_driver.rs
crates/pyq-index/: Cargo.toml
crates/pyq-index/src/: extract.rs  lib.rs  model.rs
crates/pyq-index/tests/: extract.rs
crates/pyq-output/: Cargo.toml
crates/pyq-output/src/: lib.rs
crates/pyq-resolve/: Cargo.toml
crates/pyq-resolve/src/: graph.rs  lib.rs  syntactic.rs  ty_backed.rs  unified.rs
crates/pyq-resolve/tests/: callgraph.rs  probe_locals.rs  sample.rs
examples/sample/: app.py  cli.py  config.py
examples/sample/pkg/: models.py
