[workspace]
resolver = "2"
members = [
    "crates/pyq-cli",
    "crates/pyq-dynamic",
    "crates/pyq-index",
    "crates/pyq-output",
    "crates/pyq-resolve",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/nickbeaulieu/pyq"

# The hot path is the ruff/ty parse + salsa stack, spread across many crates.
# Cross-crate inlining (thin LTO) and a single codegen unit tighten that inner
# loop. (No `panic = "abort"`: ty relies on `catch_unwind` to turn a per-file
# panic into a diagnostic, so unwinding must stay — one bad file degrades
# gracefully instead of aborting the run.) Costs build time only.
[profile.release]
lto = "thin"
codegen-units = 1

[workspace.dependencies]
# Internal
pyq-dynamic = { path = "crates/pyq-dynamic" }
pyq-index = { path = "crates/pyq-index" }
pyq-output = { path = "crates/pyq-output" }
pyq-resolve = { path = "crates/pyq-resolve" }

# Python parsing/semantics — pinned to a ruff release tag (not on crates.io).
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }

# CLI / serialization / fs walking
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
anyhow = "1"
tempfile = "3"
# Analysis cache (`~/.pyq/`): content hashing, home-dir resolution, binary format.
blake3 = "1"
dirs = "5"
bincode = "1"
