[package]
name = "pyq-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pyq"
path = "src/main.rs"

[dependencies]
pyq-dynamic.workspace = true
pyq-index.workspace = true
pyq-output.workspace = true
pyq-resolve.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ignore.workspace = true
anyhow.workspace = true
blake3.workspace = true
dirs.workspace = true
bincode.workspace = true
toml = "1"

[dev-dependencies]
tempfile.workspace = true
